--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,10 +8,12 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js",
+    "dev": "concurrently \"cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js\" \"yarn gql:watch\"",
     "start": "node server/index.js",
     "build": "next build",
     "heroku-postbuild": "npm run build",
+    "gql:compile": "graphql-codegen --config codegen.ts",
+    "gql:watch": "graphql-codegen --config codegen.ts --watch",
     "test": "jest",
     "test:watch": "jest --watch",
     "cloc": "find . -name '*.js' -not -path \"./node_modules*\" -not -path \"./.next*\" | xargs wc -l",
@@ -32,8 +34,13 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-codegen/introspection": "4.0.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@next/env": "^12.3.1",
     "@next/eslint-plugin-next": "^12.3.1",
+    "@parcel/watcher": "^2.3.0",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
     "@stripe/stripe-js": "^1.22.0",
@@ -47,6 +54,7 @@
     "@types/useragent": "2.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "abab": "^2.0.5",
+    "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
     "gsheets": "^3.0.1",
     "jest": "^29.5.0",
@@ -97,7 +105,6 @@
     "express-rate-limit": "^5.5.1",
     "framer-motion": "^10.12.4",
     "glamor": "^2.20.40",
-    "graphql": "^15.3.0",
     "helmet": "^3.23.3",
     "immer": "^9.0.12",
     "jose": "^4.8.3",
