--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "extends": "@republik/tsconfig/nextjs.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/generated/*": [
+        "./__generated__/*"
+      ],
+    }
+  },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
