--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,13 @@
   "commitMessagePrefix": "chore(deps): renovate",
   "packageRules": [
     {
+      "enabled": false,
+      "packagePatterns": [
+        "*"
+      ]
+    },
+    {
+      "enabled": true,
       "description": "All Next.js dependencies are updated to the latest minor or patch version.",
       "matchDepPatterns": [
         "next",
@@ -20,6 +27,7 @@
       ]
     },
     {
+      "enabled": true,
       "description": "All React dependencies are updated to the latest minor or patch version.",
       "matchDepPatterns": [
         "react",
@@ -34,6 +42,23 @@
       ]
     },
     {
+      "enabled": true,
+      "description": "All Apollo dependencies are updated to the latest minor or patch version.",
+      "matchDepPatterns": [
+        "@apollo/*",
+        "apollo-*",
+        "apollo",
+        "graphql",
+        "graphql-tag",
+        "graphql-tools",
+        "graphql-type-json",
+        "graphql-upload",
+        "graphql-ws",
+        "subscriptions-transport-ws"
+      ]
+    },
+    {
+      "enabled": true,
       "description": "All testing dependencies are updated to the latest minor or patch version.",
       "matchDepPatterns": [
         "@testing-library/*",
