--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,7 +8,8 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js",
+    "dev": "concurrently \"yarn dev:express\" \"yarn codegen --watch\"",
+    "dev:express": "cross-env NODE_ENV=development nodemon --watch server --watch .env --watch next.config.js server/index.js",
     "start": "node server/index.js",
     "build": "next build",
     "heroku-postbuild": "npm run build",
@@ -20,7 +21,8 @@
     "translations": "npm run translations-raw && git add -p lib/translations.json && git checkout -- lib/translations.json",
     "translations-vote": "NODE_OPTIONS='-r dotenv/config' gsheets --key=1oBlTiPKIon4p5aek5vEXluWMn0TRwrk-JftznGjTmdQ --title=live --pretty --out components/Vote/translations-vote.json",
     "analyze": "ANALYZE=true next build",
-    "prepare": "panda codegen"
+    "prepare": "panda codegen",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "repository": {
     "type": "git",
@@ -33,9 +35,13 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "devDependencies": {
-    "@pandacss/dev": "^0.15.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/client-preset": "4.1.0",
+    "@graphql-codegen/introspection": "4.0.0",
     "@next/env": "^13.5.1",
     "@next/eslint-plugin-next": "^13.5.1",
+    "@pandacss/dev": "^0.15.0",
+    "@parcel/watcher": "^2.3.0",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
     "@stripe/stripe-js": "^1.22.0",
@@ -49,6 +55,7 @@
     "@types/useragent": "2.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "abab": "^2.0.5",
+    "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
     "gsheets": "^3.0.1",
     "jest": "^29.5.0",
