--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -51,7 +51,8 @@
     "@types/events": "^3.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^16.11.21",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/useragent": "2.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "abab": "^2.0.5",
