--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -75,6 +75,7 @@
     "@next/bundle-analyzer": "^13.5.1",
     "@project-r/styleguide": "*",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-visually-hidden": "^1.0.3",
     "@republik/icons": "*",
     "@republik/mdast-react-render": "*",
     "@republik/nextjs-apollo-client": "*",
