--- a/apps/publikator/.env.example
+++ b/apps/publikator/.env.example
@@ -12,8 +12,8 @@ NEXT_PUBLIC_UNCOMMITTED_CHANGES_POLL_INTERVAL_MS=5010
 
 NEXT_PUBLIC_FRONTEND_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_PUBLIC_BASE_URL=http://localhost:3005
-# MATOMO_URL_BASE=https://MATOMO.example.com
-# MATOMO_SITE_ID=2
+# PIWIK_URL_BASE=https://piwik.example.com
+# PIWIK_SITE_ID=2
 
 # Use prefix for repository names: "{REPO_PREFIX}some-repository-name"
 #REPO_PREFIX=dev-
