--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -48,6 +48,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/applepayjs": "^3.0.3",
+    "@types/d3-force": "^3.0.7",
+    "@types/d3-selection": "^3.0.8",
     "@types/events": "^3.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^16.11.21",
@@ -97,11 +99,14 @@
     "d3-color": "^1.4.1",
     "d3-dsv": "^1.2.0",
     "d3-ease": "^1.0.7",
+    "d3-force": "^3.0.0",
+    "d3-force-limit": "^1.2.1",
     "d3-format": "^1.4.5",
     "d3-geo": "^1.12.1",
     "d3-hierarchy": "^1.1.9",
     "d3-interpolate": "^1.4.0",
     "d3-scale": "^2.1.2",
+    "d3-selection": "^3.0.0",
     "d3-shape": "^1.3.7",
     "d3-time": "^1.1.0",
     "d3-time-format": "^2.3.0",
@@ -142,6 +147,7 @@
     "sharp": "^0.31.3",
     "subscriptions-transport-ws": "^0.9.19",
     "topojson": "^3.0.2",
+    "use-resize-observer": "^9.1.0",
     "useragent": "^2.3.0",
     "uuid": "^3.4.0",
     "validator": "^13.7.0",
