--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@apollo/experimental-nextjs-app-support": "^0.4.2",
+    "@csstools/postcss-cascade-layers": "^4.0.0",
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/modifiers": "^6.0.0",
     "@dnd-kit/sortable": "^7.0.1",
@@ -89,6 +90,7 @@
     "@vercel/og": "^0.5.18",
     "apollo-fetch": "^0.7.0",
     "auto-text-size": "0.2.1",
+    "autoprefixer": "^10.4.16",
     "body-parser": "^1.19.1",
     "chalk": "^4.1.2",
     "clipboard-copy": "^3.2.0",
