--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -38,8 +38,8 @@
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/introspection": "4.0.0",
-    "@next/env": "13.5.3",
-    "@next/eslint-plugin-next": "13.5.3",
+    "@next/env": "^14.0.0",
+    "@next/eslint-plugin-next": "^14.0.0",
     "@pandacss/dev": "^0.16.0",
     "@parcel/watcher": "^2.3.0",
     "@republik/eslint-config-frontend": "*",
@@ -76,7 +76,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/resolvers": "^3.3.1",
     "@juggle/resize-observer": "^3.4.0",
-    "@next/bundle-analyzer": "13.5.3",
+    "@next/bundle-analyzer": "^14.0.0",
     "@project-r/styleguide": "*",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -131,7 +131,7 @@
     "load-script": "^1.0.0",
     "lodash": "^4.17.21",
     "lru-cache": "^4.1.3",
-    "next": "13.5.3",
+    "next": "^14.0.0",
     "next-themes": "^0.2.1",
     "photoswipe": "^4.1.3",
     "prop-types": "^15.8.1",
