--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -114,6 +114,7 @@
     "d3-time": "^1.1.0",
     "d3-time-format": "^2.3.0",
     "d3-timer": "^1.0.10",
+    "dayjs": "^1.11.10",
     "dotenv": "^8.6.0",
     "downshift": "^2.2.3",
     "events": "^3.3.0",
@@ -153,7 +154,7 @@
     "topojson": "^3.0.2",
     "use-resize-observer": "^9.1.0",
     "useragent": "^2.3.0",
-    "uuid": "^3.4.0",
+    "uuid": "^9.0.1",
     "validator": "^13.7.0",
     "zod": "3.22.2"
   }
